[package]
name = "syn-flood"
version = "0.0.1"
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]
edition = "2018"
description = "A simple tool for performing TCP SYN flood attack."
readme = "README.md"
repository = "https://github.com/linyinfeng/syn-flood"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "*"
log = "*"
env_logger = "*"
structopt = "*"
quick-error = "*"
rand = "*"
